# postery

./: README.md  pyproject.toml
postery/: core.py  statics.py
